refactor: move from unit id to uuid and rename all ids so that the name clearly reflects the essence of the id
