# back/internal/api/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: AmDm Guitar Chords API
-  version: 0.1.0
+  version: 0.2.0
 
 servers:
   - url: /api
@@ -77,7 +77,8 @@ paths:
         - name: artist_id
           in: query
           schema:
-            type: integer
+            type: string
+            format: uuid
         - name: limit
           in: query
           schema:
@@ -123,8 +124,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       responses:
         '200':
           description: Song
@@ -142,8 +143,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
       requestBody:
         required: true
         content:
@@ -171,8 +172,8 @@ paths:
           in: path
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
+            format: uuid
         - name: semitones
           in: query
           required: true
@@ -193,9 +194,9 @@ components:
     Artist:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
+        artist_id:
+          type: string
+          format: uuid
         name:
           type: string
         slug:
@@ -204,7 +205,7 @@ components:
           type: string
           format: date-time
       required:
-        - id
+        - artist_id
         - name
         - slug
 
@@ -242,12 +243,12 @@ components:
     SongListItem:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
+        song_id:
+          type: string
+          format: uuid
         artist_id:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
         title:
           type: string
         slug:
@@ -255,19 +256,19 @@ components:
         tonality:
           type: integer
       required:
-        - id
+        - song_id
         - title
         - slug
 
     Song:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
+        song_id:
+          type: string
+          format: uuid
         artist_id:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
         title:
           type: string
         slug:
@@ -283,7 +284,7 @@ components:
           type: string
           format: date-time
       required:
-        - id
+        - song_id
         - title
         - slug
 
@@ -339,8 +340,8 @@ components:
         - slug
       properties:
         artist_id:
-          type: integer
-          format: int64
+          type: string
+          format: uuid
         title:
           type: string
         slug:
