# back/internal/handler/gen/server.go
@@ -1,6 +1,6 @@
 // Package gen provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.6.0 DO NOT EDIT.
 package gen
 
 import (
@@ -12,6 +12,7 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/oapi-codegen/runtime"
 	strictnethttp "github.com/oapi-codegen/runtime/strictmiddleware/nethttp"
+	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 // ServerInterface represents all server handlers.
@@ -33,13 +34,13 @@ type ServerInterface interface {
 	CreateSong(w http.ResponseWriter, r *http.Request)
 	// Get song by ID
 	// (GET /songs/{songId})
-	GetSong(w http.ResponseWriter, r *http.Request, songId int64)
+	GetSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID)
 	// Update song
 	// (PUT /songs/{songId})
-	UpdateSong(w http.ResponseWriter, r *http.Request, songId int64)
+	UpdateSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID)
 	// Transpose song
 	// (POST /songs/{songId}/transpose)
-	TransposeSong(w http.ResponseWriter, r *http.Request, songId int64, params TransposeSongParams)
+	TransposeSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID, params TransposeSongParams)
 }
 
 // Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
@@ -78,19 +79,19 @@ func (_ Unimplemented) CreateSong(w http.ResponseWriter, r *http.Request) {
 
 // Get song by ID
 // (GET /songs/{songId})
-func (_ Unimplemented) GetSong(w http.ResponseWriter, r *http.Request, songId int64) {
+func (_ Unimplemented) GetSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
 // Update song
 // (PUT /songs/{songId})
-func (_ Unimplemented) UpdateSong(w http.ResponseWriter, r *http.Request, songId int64) {
+func (_ Unimplemented) UpdateSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
 // Transpose song
 // (POST /songs/{songId}/transpose)
-func (_ Unimplemented) TransposeSong(w http.ResponseWriter, r *http.Request, songId int64, params TransposeSongParams) {
+func (_ Unimplemented) TransposeSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID, params TransposeSongParams) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -113,7 +114,7 @@ func (siw *ServerInterfaceWrapper) ListArtists(w http.ResponseWriter, r *http.Re
 
 	// ------------- Optional query parameter "limit" -------------
 
-	err = runtime.BindQueryParameter("form", true, false, "limit", r.URL.Query(), &params.Limit)
+	err = runtime.BindQueryParameterWithOptions("form", true, false, "limit", r.URL.Query(), &params.Limit, runtime.BindQueryParameterOptions{Type: "integer", Format: ""})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "limit", Err: err})
 		return
@@ -121,7 +122,7 @@ func (siw *ServerInterfaceWrapper) ListArtists(w http.ResponseWriter, r *http.Re
 
 	// ------------- Optional query parameter "offset" -------------
 
-	err = runtime.BindQueryParameter("form", true, false, "offset", r.URL.Query(), &params.Offset)
+	err = runtime.BindQueryParameterWithOptions("form", true, false, "offset", r.URL.Query(), &params.Offset, runtime.BindQueryParameterOptions{Type: "integer", Format: ""})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "offset", Err: err})
 		return
@@ -160,7 +161,7 @@ func (siw *ServerInterfaceWrapper) GetArtistBySlug(w http.ResponseWriter, r *htt
 	// ------------- Path parameter "artistSlug" -------------
 	var artistSlug string
 
-	err = runtime.BindStyledParameterWithOptions("simple", "artistSlug", chi.URLParam(r, "artistSlug"), &artistSlug, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "artistSlug", chi.URLParam(r, "artistSlug"), &artistSlug, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: ""})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "artistSlug", Err: err})
 		return
@@ -187,7 +188,7 @@ func (siw *ServerInterfaceWrapper) ListSongs(w http.ResponseWriter, r *http.Requ
 
 	// ------------- Optional query parameter "artist_id" -------------
 
-	err = runtime.BindQueryParameter("form", true, false, "artist_id", r.URL.Query(), &params.ArtistId)
+	err = runtime.BindQueryParameterWithOptions("form", true, false, "artist_id", r.URL.Query(), &params.ArtistId, runtime.BindQueryParameterOptions{Type: "string", Format: "uuid"})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "artist_id", Err: err})
 		return
@@ -195,7 +196,7 @@ func (siw *ServerInterfaceWrapper) ListSongs(w http.ResponseWriter, r *http.Requ
 
 	// ------------- Optional query parameter "limit" -------------
 
-	err = runtime.BindQueryParameter("form", true, false, "limit", r.URL.Query(), &params.Limit)
+	err = runtime.BindQueryParameterWithOptions("form", true, false, "limit", r.URL.Query(), &params.Limit, runtime.BindQueryParameterOptions{Type: "integer", Format: ""})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "limit", Err: err})
 		return
@@ -203,7 +204,7 @@ func (siw *ServerInterfaceWrapper) ListSongs(w http.ResponseWriter, r *http.Requ
 
 	// ------------- Optional query parameter "offset" -------------
 
-	err = runtime.BindQueryParameter("form", true, false, "offset", r.URL.Query(), &params.Offset)
+	err = runtime.BindQueryParameterWithOptions("form", true, false, "offset", r.URL.Query(), &params.Offset, runtime.BindQueryParameterOptions{Type: "integer", Format: ""})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "offset", Err: err})
 		return
@@ -240,9 +241,9 @@ func (siw *ServerInterfaceWrapper) GetSong(w http.ResponseWriter, r *http.Reques
 	var err error
 
 	// ------------- Path parameter "songId" -------------
-	var songId int64
+	var songId openapi_types.UUID
 
-	err = runtime.BindStyledParameterWithOptions("simple", "songId", chi.URLParam(r, "songId"), &songId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "songId", chi.URLParam(r, "songId"), &songId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: "uuid"})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "songId", Err: err})
 		return
@@ -265,9 +266,9 @@ func (siw *ServerInterfaceWrapper) UpdateSong(w http.ResponseWriter, r *http.Req
 	var err error
 
 	// ------------- Path parameter "songId" -------------
-	var songId int64
+	var songId openapi_types.UUID
 
-	err = runtime.BindStyledParameterWithOptions("simple", "songId", chi.URLParam(r, "songId"), &songId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "songId", chi.URLParam(r, "songId"), &songId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: "uuid"})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "songId", Err: err})
 		return
@@ -290,9 +291,9 @@ func (siw *ServerInterfaceWrapper) TransposeSong(w http.ResponseWriter, r *http.
 	var err error
 
 	// ------------- Path parameter "songId" -------------
-	var songId int64
+	var songId openapi_types.UUID
 
-	err = runtime.BindStyledParameterWithOptions("simple", "songId", chi.URLParam(r, "songId"), &songId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	err = runtime.BindStyledParameterWithOptions("simple", "songId", chi.URLParam(r, "songId"), &songId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: "uuid"})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "songId", Err: err})
 		return
@@ -310,7 +311,7 @@ func (siw *ServerInterfaceWrapper) TransposeSong(w http.ResponseWriter, r *http.
 		return
 	}
 
-	err = runtime.BindQueryParameter("form", true, true, "semitones", r.URL.Query(), &params.Semitones)
+	err = runtime.BindQueryParameterWithOptions("form", true, true, "semitones", r.URL.Query(), &params.Semitones, runtime.BindQueryParameterOptions{Type: "integer", Format: ""})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "semitones", Err: err})
 		return
@@ -578,7 +579,7 @@ func (response CreateSong400Response) VisitCreateSongResponse(w http.ResponseWri
 }
 
 type GetSongRequestObject struct {
-	SongId int64 `json:"songId"`
+	SongId openapi_types.UUID `json:"songId"`
 }
 
 type GetSongResponseObject interface {
@@ -603,7 +604,7 @@ func (response GetSong404Response) VisitGetSongResponse(w http.ResponseWriter) e
 }
 
 type UpdateSongRequestObject struct {
-	SongId int64 `json:"songId"`
+	SongId openapi_types.UUID `json:"songId"`
 	Body   *UpdateSongJSONRequestBody
 }
 
@@ -637,7 +638,7 @@ func (response UpdateSong404Response) VisitUpdateSongResponse(w http.ResponseWri
 }
 
 type TransposeSongRequestObject struct {
-	SongId int64 `json:"songId"`
+	SongId openapi_types.UUID `json:"songId"`
 	Params TransposeSongParams
 }
 
@@ -860,7 +861,7 @@ func (sh *strictHandler) CreateSong(w http.ResponseWriter, r *http.Request) {
 }
 
 // GetSong operation middleware
-func (sh *strictHandler) GetSong(w http.ResponseWriter, r *http.Request, songId int64) {
+func (sh *strictHandler) GetSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID) {
 	var request GetSongRequestObject
 
 	request.SongId = songId
@@ -886,7 +887,7 @@ func (sh *strictHandler) GetSong(w http.ResponseWriter, r *http.Request, songId 
 }
 
 // UpdateSong operation middleware
-func (sh *strictHandler) UpdateSong(w http.ResponseWriter, r *http.Request, songId int64) {
+func (sh *strictHandler) UpdateSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID) {
 	var request UpdateSongRequestObject
 
 	request.SongId = songId
@@ -919,7 +920,7 @@ func (sh *strictHandler) UpdateSong(w http.ResponseWriter, r *http.Request, song
 }
 
 // TransposeSong operation middleware
-func (sh *strictHandler) TransposeSong(w http.ResponseWriter, r *http.Request, songId int64, params TransposeSongParams) {
+func (sh *strictHandler) TransposeSong(w http.ResponseWriter, r *http.Request, songId openapi_types.UUID, params TransposeSongParams) {
 	var request TransposeSongRequestObject
 
 	request.SongId = songId
